# crcspeed

./: .gitignore  CMakeLists.txt  Makefile  README.md  crc16.c  crc16.h  crc16speed.c  crc16speed.h  crc64.c  crc64speed.c  crc64speed.h  crcspeed.c  crcspeed.h  main.c
